bytestash/bytestash-peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-mtls
  namespace: bytestash
spec:
  mtls:
    mode: STRICT
