bytestash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bytestash
  namespace: bytestash
spec:
  selector:
    app: bytestash
  ports:
    - port: 80
      targetPort: 5000
