bytestash/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bytestash-gateway
  namespace: bytestash
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "bytestash.local.gwg313.xyz"
      tls:
        mode: SIMPLE
        credentialName: bytestash-cert
